--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "chestnut",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
+  "description": "A monorepo for chestnut project",
+  "private": true,
   "scripts": {
-    "build": "tsc"
+    "build": "pnpm -r build",
+    "clean": "pnpm -r exec rm -rf dist node_modules",
+    "dev": "pnpm -r --parallel dev"
   },
-  "dependencies": {},
   "devDependencies": {
     "typescript": "^5.5.3"
   },
-  "private": true
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  }
 }
