--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
     "dev": "pnpm -r --parallel dev"
   },
   "devDependencies": {
+    "eslint": "^9.39.1",
     "typescript": "^5.5.3"
   },
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
+  },
+  "dependencies": {
+    "@eslint/js": "^9.39.1",
+    "@eslint/json": "^0.14.0",
+    "globals": "^16.5.0",
+    "jiti": "^2.6.1",
+    "typescript-eslint": "^8.46.4"
   }
 }
